Table users {
  id integer [pk, increment]
  name varchar(100) [not null]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(30) [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp
}

Table categories {
  id integer [pk, increment]
  name varchar(100) [not null, unique]
  description text
  is_active boolean [not null, default: true]
}

Table priorities {
  id integer [pk, increment]
  name varchar(50) [not null, unique]
  level integer [not null]
  description text
}

Table tickets {
  id integer [pk, increment]
  ticket_number varchar(30) [not null, unique]
  customer_id integer [not null, ref: > users.id]
  category_id integer [not null, ref: > categories.id]
  priority_id integer [not null, ref: > priorities.id]
  assigned_agent_id integer [ref: > users.id]
  subject varchar(200) [not null]
  description text [not null]
  status varchar(30) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  resolved_at timestamp
  closed_at timestamp
}

Table ticket_comments {
  id integer [pk, increment]
  ticket_id integer [not null, ref: > tickets.id]
  author_id integer [not null, ref: > users.id]
  comment text [not null]
  created_at timestamp [not null]
  updated_at timestamp
}